--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node binarySearch.js"
+    "dev": "node binarySearchBasic.js"
   },
   "license": "MIT",
   "dependencies": {
